--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="container">
           <p class="product__company">Sneaker Company</p>
           <div class="product">
-            <h1 class="product__titile">Fall Limited Edition Sneakers</h1>
+            <h1 class="product__title">Fall Limited Edition Sneakers</h1>
             <p class="product__description">
               These low-profile sneakers are your perfect casual wear companion. Featuring a 
               durable rubber outer sole, they’ll withstand everything the weather can offer.
