--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
               <img src="/images/image-product-1.jpg" alt="product">
             </div>
             <div class="swiper-slide">
-              <img src="/images/image-product-2-thumbnail.jpg" alt="product">
+              <img src="/images/image-product-2.jpg" alt="product">
             </div>
             <div class="swiper-slide">
-              <img src="/images/image-product-3-thumbnail.jpg" alt="product">
+              <img src="/images/image-product-3.jpg" alt="product">
             </div>
             <div class="swiper-slide">
-              <img src="/images/image-product-4-thumbnail.jpg" alt="product">
+              <img src="/images/image-product-4.jpg" alt="product">
             </div>
           </div>
 
@@ -140,6 +140,20 @@
           </div>
 
         </div>
+        <!-- ---start--image-space-in-desktop---- -->
+        <div class="container__images">
+          <div class="image__principal">
+            <img id="primary_img" src="/images/image-product-1.jpg" alt="image">
+          </div>
+          <div class="images__secondary">
+            <img class="img" src="/images/image-product-1-thumbnail.jpg" alt="image" id="1" onclick="changeImage(id)" >
+            <img class="img" src="/images/image-product-2-thumbnail.jpg" alt="image" id="2" onclick="changeImage(id)">
+            <img class="img" src="/images/image-product-3-thumbnail.jpg" alt="image" id="3" onclick="changeImage(id)">
+            <img class="img" src="/images/image-product-4-thumbnail.jpg" alt="image" id="4" onclick="changeImage(id)">
+          </div>
+        </div>
+        
+        
       </section>
       <!-- ----start-product__content---- -->
       <section class="product__content">
