add the model div

--- a/index.html
+++ b/index.html
@@ -185,6 +185,20 @@
         </div>
       </section>
     </main>
+    <!-- ---start-model-------- -->
+    <div class="modal">
+      <div class="container">
+        <div class="icon__container">
+          <button id="btn_Previous"><i class="fa-solid fa-angle-left"></i></button>
+        </div>
+      <div class="image__container">
+        <img src="/images/image-product-1.jpg" alt="image">
+      </div>
+       <div class="icon__container">
+          <button id="btn_Next"><i class="fa-solid fa-angle-right"></i></button>
+        </div>
+      </div>
+    </div>
 
     <!-- 
 
